# dqbf

./: .gitignore  CLAUDE.md  LICENSE  OVERVIEW.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  integration.yml
benchmarks/: CLAUDE.md
benchmarks/dqbf/qbfeval/: README.md
benchmarks/eqfob/: CLAUDE.md
benchmarks/eqfob/bitwidth_scaling/: generate.py
benchmarks/holdout/dqbf/hqs/: README.md
benchmarks/holdout/qbvf/abv/: README.md
benchmarks/qbvf/ufbv/: README.md
benchmarks/runner/: CLAUDE.md  cli.py  compare.py  manifest.py  report.py  run.py  runner_test.py
benchmarks/train/: CLAUDE.md
benchmarks/train/bitwidth_scaling/: generate.py
core/: CLAUDE.md  __init__.py  aiger.py  certificate.py  dqdimacs.py  dqdimacs_test.py  formula.py  formula_test.py  proof_trace.py  semantics.py  semantics_test.py
docs/: CLAUDE.md  IMPROVEMENT_LOOP.md
docs/dev_reports/: 2026-04-28_0311.html  2026-04-28_0312_baseline-naive-forkres.html  index.html
docs/references/: dqdimacs.md
docs/references/fork_resolution_journal/: SOURCE  main.bib  main.tex
docs/references/local/: README.md
provers/: CLAUDE.md
provers/forkres/: CLAUDE.md  __init__.py  cli.py  proof.py  proof_test.py  rules.py  rules_test.py  search.py  search_test.py  smoke_test.py
provers/forkres/rust/: Cargo.toml
provers/forkres/rust/dqdimacs/: Cargo.toml
provers/forkres/rust/dqdimacs/src/: lib.rs
provers/forkres/rust/forkres-cli/: Cargo.toml
provers/forkres/rust/forkres-cli/src/: main.rs
provers/forkres/rust/forkres-core/: Cargo.toml
provers/forkres/rust/forkres-core/src/: lib.rs
provers/python/: CLAUDE.md
provers/rust/: CLAUDE.md
scripts/: download_benchmarks.sh  make_report.py
tests/: CLAUDE.md
tests/integration/: CLAUDE.md  manifest.json  test_e2e.py
tests/integration/tiny/: copy_sat.dqdimacs  fork_unsat.dqdimacs  trivial_sat.dqdimacs  wrongdep_unsat.dqdimacs
tools/: CLAUDE.md
tools/bmc2dqbf/: CLAUDE.md  encode.py
tools/eqfob/: CLAUDE.md
tools/eqfob/eqfob/: __init__.py  ast.py  bitblast.py  bitblast_test.py  builder.py  cli.py  parse.py  parse_test.py  typecheck.py
tools/eqfob/examples/: add_gt.eqfob  dep_cycle.eqfob
tools/ltlsynth2dqbf/: CLAUDE.md  encode.py
tools/qbvf2dqbf/: CLAUDE.md  encode.py
tools/verify/: CLAUDE.md  cli.py  sat.py  sat_test.py  unsat.py  verify_test.py
