[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqbf"
version = "0.0.1"
description = "DQBF provers, the EQFOB modeling language, and translation/verification tooling built around fork resolution."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Markus Rabe" }]
dependencies = [
  "py-aiger>=6.0",
  "py-aiger-bv>=4.0",
  "lark>=1.1",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
eqfob = "tools.eqfob.cli:main"
dqbf-verify = "tools.verify.cli:main"
dqbf-bench = "benchmarks.runner.cli:main"

[tool.hatch.build.targets.wheel]
exclude = ["**/*_test.py", "**/rust"]
packages = [
  "provers/forkres",
  "tools/eqfob/eqfob",
  "tools/verify",
  "tools/qbvf2dqbf",
  "tools/bmc2dqbf",
  "tools/ltlsynth2dqbf",
  "benchmarks/runner",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["provers", "tools", "benchmarks", "tests"]
python_files = ["*_test.py", "test_*.py"]
addopts = "-q"
